<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDarkBackground"
    tools:context=".DetailsActivity">

    <ImageView
        android:id="@+id/imageView_episode_large"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_image_height"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/details_margin">

        <TextView
            android:id="@+id/textView_episode_season"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/views_margin_sm"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/title_text_size"
            android:text="@string/sample_text_season" />

        <TextView
            android:id="@+id/textView_episode_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/views_margin_sm"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size"
            android:text="@string/sample_text_episode_title" />

        <TextView
            android:id="@+id/textView_episode_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/views_margin_sm"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/sample_text_summary" />


        <TextView
            android:id="@+id/textView_episode_airdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/views_margin_sm"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/sample_text_airdate" />



        <TextView
            android:id="@+id/textView_episode_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/views_margin_sm"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/sample_text_runtime" />

        <Button
            android:id="@+id/button_view_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/views_margin_sm"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/button_text_openurl" />

    </LinearLayout>

</LinearLayout>