<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".RecyclerViewItem"
    android:id="@+id/layout_list_item"
    android:background="@color/colorDarkBackground"
    android:layout_marginTop="@dimen/list_margin_10"
    android:layout_marginLeft="@dimen/list_margin_20"
    android:layout_marginRight="@dimen/list_margin_20"
    android:layout_marginBottom="@dimen/list_margin_10">

    <ImageView
        android:id="@+id/image_episode_medium"
        android:layout_width="@dimen/medium_image_width"
        android:layout_height="@dimen/medium_image_height"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_episode_season_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/title_text_size"
                android:text="@string/sample_text_item_title"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/views_margin_left"/>

            <TextView
                android:id="@+id/textView_episode_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/sample_text_item_name"
                android:layout_marginLeft="@dimen/views_margin_left"/>


            <TextView
                android:id="@+id/textView_episode_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/sample_text_summary"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text_size"
                android:layout_marginLeft="@dimen/views_margin_left"/>
        </LinearLayout>
</LinearLayout>